--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
     <head>
         <meta charset="utf-8">
         <title>Rock Paper Scissors</title>
-        <script src="./script.js"></script>
+        <script src="./script.js" defer></script>
+        <link rel="stylesheet" href="./styles.css">
     </head>
     <body>
-        <p>Hello People</p>
+        <h1>Play Rock Paper Scissors</h1>
+        <div id="container">
+            <button id="rock">Rock</button>
+            <button id="paper">Paper</button>
+            <button id="scissors">Scissors</button>
+        </div>
     </body>
 </html>
